--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,7 @@ title:                 Teja Vishnu Vardhan Boddu
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Hydejack is a boutique Jekyll theme for hackers, nerds, and academics,
-  with a focus on personal sites that are meant to impress.
+  Robotics and AI Engineer.
 
 # A shorter description for the sidebar.
 tagline:               Ask my chatbot about me!
@@ -97,7 +96,7 @@ theme: jekyll-theme-hydejack
 # ----------------------------------------------------------------------------------------
  
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/sidebar-bg.jpg
+accent_image:          /assets/img/blue.jpg
 accent_color:          rgb(79,177,186)
 
 # This is used for the `theme-color` meta tag,
